fix: allow all vercel.app subdomains for CORS